// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputNumberSlider > renders correctly with class 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2 w-64"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-3"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <!--v-if-->
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with decrement 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 pe-9 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 end-0 flex flex-col justify-center [&>button]:scale-80 [&>button]:py-0 pe-1.5"
        data-slot="buttons"
      >
        <!--v-if-->
        <button
          aria-disabled="false"
          aria-label="Decrement"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 text-base text-muted hover:text-default focus-visible:outline-inverted active:text-default p-2"
          data-slot="base"
          tabindex="-1"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-5"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
      </div>
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with disabled 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-disabled=""
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-3"
        data-disabled=""
        data-slot="base"
        disabled=""
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <!--v-if-->
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="true"
      class="relative flex touch-none items-center select-none cursor-not-allowed opacity-75 w-full"
      data-disabled=""
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
        data-disabled=""
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-disabled=""
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5 cursor-not-allowed"
        data-disabled=""
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with increment 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 pe-9 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 end-0 flex flex-col justify-center [&>button]:scale-80 [&>button]:py-0 pe-1.5"
        data-slot="buttons"
      >
        <button
          aria-disabled="false"
          aria-label="Increment"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 text-base text-muted hover:text-default focus-visible:outline-inverted active:text-default p-2"
          data-slot="base"
          tabindex="-1"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-5"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <!--v-if-->
      </div>
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with increment and decrement 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 pe-9 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <div
        class="absolute inset-y-0 end-0 flex flex-col justify-center [&>button]:scale-80 [&>button]:py-0 pe-1.5"
        data-slot="buttons"
      >
        <button
          aria-disabled="false"
          aria-label="Increment"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 text-base text-muted hover:text-default focus-visible:outline-inverted active:text-default p-2"
          data-slot="base"
          tabindex="-1"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-5"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <button
          aria-disabled="false"
          aria-label="Decrement"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 text-base text-muted hover:text-default focus-visible:outline-inverted active:text-default p-2"
          data-slot="base"
          tabindex="-1"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-5"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
      </div>
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with min and max 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        aria-valuemax="50"
        aria-valuemin="0"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-3"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <!--v-if-->
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="50"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with size lg 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-3"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <!--v-if-->
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with size md 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-1.5 ps-2.5 text-sm focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-2.5"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <!--v-if-->
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-4"
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with size sm 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-1 ps-2 text-xs focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-2"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <!--v-if-->
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-1.5"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-3"
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with step 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-3"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <!--v-if-->
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with tooltip 1`] = `
<div>
  
  <div
    class="flex items-center gap-x-2"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-3"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <!--v-if-->
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      
      
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
        data-grace-area-trigger=""
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        data-state="closed"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      <!--teleport start-->
      <!--teleport end-->
      
      
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly with ui 1`] = `
<div>
  
  <div
    class="flex items-center gap-4"
    data-slot="root"
  >
    <div
      class="relative inline-flex items-center"
      data-slot="root"
      role="group"
    >
      
      <input
        aria-roledescription="Number field"
        autocomplete="off"
        autocorrect="off"
        class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-3"
        data-slot="base"
        id="v-0"
        inputmode="decimal"
        role="spinbutton"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <!--v-if-->
      
      <!--v-if-->
    </div>
    <span
      aria-disabled="false"
      class="relative flex touch-none items-center select-none w-full"
      data-orientation="horizontal"
      data-slider-impl=""
      data-slot="root"
      dir="ltr"
      id="v-1"
      style="--reka-slider-thumb-transform: translateX(-50%);"
    >
      
      
      
      <span
        class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
        data-orientation="horizontal"
        data-slot="track"
      >
        
        <span
          class="absolute h-full rounded-full bg-primary"
          data-orientation="horizontal"
          data-slot="range"
          style="left: 0%; right: 100%;"
        >
          
          
        </span>
        
      </span>
      <span
        aria-label="Thumb"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
        data-orientation="horizontal"
        data-reka-collection-item=""
        data-slot="thumb"
        role="slider"
        style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
        tabindex="0"
      >
        
        
      </span>
      
      <!--v-if-->
      
      
    </span>
  </div>
  
</div>
`;

exports[`InputNumberSlider > renders correctly within FormField 1`] = `
<div>
  <div
    class=""
    data-slot="root"
  >
    <div
      class=""
      data-slot="wrapper"
    >
      <div
        class="flex items-center justify-between gap-1"
        data-slot="labelWrapper"
      >
        <label
          class="block font-medium text-default"
          data-slot="label"
          for="v-0"
          id="v-0-label"
        >
          
          Label
          
        </label>
        <span
          class="text-muted"
          data-slot="hint"
          id="v-0-hint"
        >
          Hint
        </span>
      </div>
      <p
        class="text-muted"
        data-slot="description"
        id="v-0-description"
      >
        Description
      </p>
    </div>
    <div
      class="mt-1"
      data-slot="container"
    >
      
      <div
        aria-describedby="v-0-hint v-0-description v-0-help"
        aria-labelledby="v-0-label"
        class="flex items-center gap-x-2"
        data-slot="root"
        role="group"
      >
        <div
          class="relative inline-flex items-center"
          data-slot="root"
          role="group"
        >
          
          <input
            aria-roledescription="Number field"
            autocomplete="off"
            autocorrect="off"
            class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset py-2 ps-3 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-3"
            data-slot="base"
            id="v-0"
            inputmode="decimal"
            role="spinbutton"
            spellcheck="false"
            tabindex="0"
            type="text"
            value=""
          />
          <!--v-if-->
          
          <!--v-if-->
        </div>
        <span
          aria-disabled="false"
          class="relative flex touch-none items-center select-none w-full"
          data-orientation="horizontal"
          data-slider-impl=""
          data-slot="root"
          dir="ltr"
          id="v-1"
          style="--reka-slider-thumb-transform: translateX(-50%);"
        >
          
          
          
          <span
            class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
            data-orientation="horizontal"
            data-slot="track"
          >
            
            <span
              class="absolute h-full rounded-full bg-primary"
              data-orientation="horizontal"
              data-slot="range"
              style="left: 0%; right: 100%;"
            >
              
              
            </span>
            
          </span>
          <span
            aria-label="Thumb"
            aria-orientation="horizontal"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
            data-orientation="horizontal"
            data-reka-collection-item=""
            data-slot="thumb"
            role="slider"
            style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
            tabindex="0"
          >
            
            
          </span>
          
          <!--v-if-->
          
          
        </span>
      </div>
      
      <p
        class="mt-1 text-muted"
        data-slot="help"
        id="v-0-help"
      >
        Help
      </p>
    </div>
  </div>
</div>
`;
